doc/_build/doctest/output.txt
Results of doctest builder run on 2015-09-21 17:43:58
=====================================================

Document: FastInstall
---------------------
**********************************************************************
File "FastInstall.rst", line 9, in default
Failed example:
    mkdir /var/prtg
Exception raised:
    Traceback (most recent call last):
      File "/usr/local/lib/python2.7/doctest.py", line 1315, in __run
        compileflags, 1) in test.globs
      File "<doctest default[0]>", line 1, in <module>
        mkdir /var/prtg
    NameError: name 'mkdir' is not defined
**********************************************************************
File "FastInstall.rst", line 10, in default
Failed example:
    mkdir /var/prtg/scriptsxml
Exception raised:
    Traceback (most recent call last):
      File "/usr/local/lib/python2.7/doctest.py", line 1315, in __run
        compileflags, 1) in test.globs
      File "<doctest default[1]>", line 1, in <module>
        mkdir /var/prtg/scriptsxml
    NameError: name 'mkdir' is not defined
**********************************************************************
File "FastInstall.rst", line 14, in default
Failed example:
    cd /var/prtg/scriptsxml
Exception raised:
    Traceback (most recent call last):
      File "/usr/local/lib/python2.7/doctest.py", line 1315, in __run
        compileflags, 1) in test.globs
      File "<doctest default[0]>", line 1, in <module>
        cd /var/prtg/scriptsxml
    NameError: name 'cd' is not defined
**********************************************************************
File "FastInstall.rst", line 15, in default
Failed example:
    git clone ruta
Exception raised:
    Traceback (most recent call last):
      File "/usr/local/lib/python2.7/doctest.py", line 1315, in __run
        compileflags, 1) in test.globs
      File "/usr/local/lib/python2.7/site-packages/sphinx/ext/doctest.py", line 358, in compile
        return compile(code, name, self.type, flags, dont_inherit)
      File "<doctest default[1]>", line 1
        git clone ruta
                ^
    SyntaxError: invalid syntax
**********************************************************************
File "FastInstall.rst", line 18, in default
Failed example:
    chown -Rv user.group /var/prtg
Exception raised:
    Traceback (most recent call last):
      File "/usr/local/lib/python2.7/doctest.py", line 1315, in __run
        compileflags, 1) in test.globs
      File "/usr/local/lib/python2.7/site-packages/sphinx/ext/doctest.py", line 358, in compile
        return compile(code, name, self.type, flags, dont_inherit)
      File "<doctest default[0]>", line 1
        chown -Rv user.group /var/prtg
                     ^
    SyntaxError: invalid syntax
**********************************************************************
File "FastInstall.rst", line 22, in default
Failed example:
    chmod u+x /var/prtg/scriptsxml/OraMon4PRTG/Main.py
Exception raised:
    Traceback (most recent call last):
      File "/usr/local/lib/python2.7/doctest.py", line 1315, in __run
        compileflags, 1) in test.globs
      File "/usr/local/lib/python2.7/site-packages/sphinx/ext/doctest.py", line 358, in compile
        return compile(code, name, self.type, flags, dont_inherit)
      File "<doctest default[0]>", line 1
        chmod u+x /var/prtg/scriptsxml/OraMon4PRTG/Main.py
              ^
    SyntaxError: invalid syntax
**********************************************************************
1 items had failures:
   6 of   6 in default
6 tests in 1 items.
0 passed and 6 failed.
***Test Failed*** 6 failures.

Doctest summary
===============
    6 tests
    6 failures in tests
    0 failures in setup code
    0 failures in cleanup code
